// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create shapshot of when text is undefined 1`] = `<DocumentFragment />`;

exports[`create shapshot of when type is error 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1001;
  margin: 0.5rem;
}

.emotion-1 {
  width: 1rem;
  height: 1rem;
}

<div
    class="emotion-0"
  >
    <div
      class="fui-Alert ___1w0g6cp_1jh3gpt f22iagw f122n59 f5pgtk9 f1oic3e7 ff3glw6 f9ggezi fz58gqq fkhj508 fl43uef f19n0e5 fxugw4r"
      role="alert"
    >
      <span
        class="fui-Alert__icon ___k55sq20_c0vl4e0 fd461yt f4ybsrx fhivll6 f1whyuy6"
      >
        <svg
          aria-hidden="true"
          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 2a8 8 0 1 1 0 16 8 8 0 0 1 0-16ZM7.8 7.11a.5.5 0 0 0-.63.06l-.06.07a.5.5 0 0 0 .06.64L9.3 10l-2.12 2.12-.06.07a.5.5 0 0 0 .06.64l.07.06c.2.13.47.11.64-.06L10 10.7l2.12 2.12.07.06c.2.13.46.11.64-.06l.06-.07a.5.5 0 0 0-.06-.64L10.7 10l2.12-2.12.06-.07a.5.5 0 0 0-.06-.64l-.07-.06a.5.5 0 0 0-.64.06L10 9.3 7.88 7.17l-.07-.06Z"
            fill="currentColor"
          />
        </svg>
      </span>
      error
      <button
        class="fui-Button r1alrhcs fui-Alert__action ___nkoa4j0_hz6oqh0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu f16muhyy fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f4jnnbt fy77jfu f44c6la fcgxt0o"
        title="Dismiss"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2"
        >
          <span
            aria-hidden="true"
            class="root_dd790ee3 emotion-1"
          >
            <svg
              class="svg_dd790ee3"
              focusable="false"
              viewBox="0 0 2048 2048"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1024 0q141 0 272 36t244 104 207 160 161 207 103 245 37 272q0 141-36 272t-104 244-160 207-207 161-245 103-272 37q-141 0-272-36t-244-104-207-160-161-207-103-245-37-272q0-141 36-272t104-244 160-207 207-161T752 37t272-37zm0 1920q124 0 238-32t214-90 181-140 140-181 91-214 32-239q0-124-32-238t-90-214-140-181-181-140-214-91-239-32q-124 0-238 32t-214 90-181 140-140 181-91 214-32 239q0 124 32 238t90 214 140 181 181 140 214 91 239 32zm443-1249l-352 353 352 353-90 90-353-352-353 352-90-90 352-353-352-353 90-90 353 352 353-352 90 90z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`create shapshot of when type is success 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1001;
  margin: 0.5rem;
}

.emotion-1 {
  width: 1rem;
  height: 1rem;
}

<div
    class="emotion-0"
  >
    <div
      class="fui-Alert ___1w0g6cp_1jh3gpt f22iagw f122n59 f5pgtk9 f1oic3e7 ff3glw6 f9ggezi fz58gqq fkhj508 fl43uef f19n0e5 fxugw4r"
      role="status"
    >
      <span
        class="fui-Alert__icon ___1fnjq5w_b4l6m40 fd461yt f4ybsrx fhivll6 f1m7fhi8"
      >
        <svg
          aria-hidden="true"
          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 2a8 8 0 1 1 0 16 8 8 0 0 1 0-16Zm3.36 5.65a.5.5 0 0 0-.64-.06l-.07.06L9 11.3 7.35 9.65l-.07-.06a.5.5 0 0 0-.7.7l.07.07 2 2 .07.06c.17.11.4.11.56 0l.07-.06 4-4 .07-.08a.5.5 0 0 0-.06-.63Z"
            fill="currentColor"
          />
        </svg>
      </span>
      success
      <button
        class="fui-Button r1alrhcs fui-Alert__action ___nkoa4j0_hz6oqh0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu f16muhyy fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f4jnnbt fy77jfu f44c6la fcgxt0o"
        title="Dismiss"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2"
        >
          <span
            aria-hidden="true"
            class="root_dd790ee3 emotion-1"
          >
            <svg
              class="svg_dd790ee3"
              focusable="false"
              viewBox="0 0 2048 2048"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1024 0q141 0 272 36t244 104 207 160 161 207 103 245 37 272q0 141-36 272t-104 244-160 207-207 161-245 103-272 37q-141 0-272-36t-244-104-207-160-161-207-103-245-37-272q0-141 36-272t104-244 160-207 207-161T752 37t272-37zm0 1920q124 0 238-32t214-90 181-140 140-181 91-214 32-239q0-124-32-238t-90-214-140-181-181-140-214-91-239-32q-124 0-238 32t-214 90-181 140-140 181-91 214-32 239q0 124 32 238t90 214 140 181 181 140 214 91 239 32zm443-1249l-352 353 352 353-90 90-353-352-353 352-90-90 352-353-352-353 90-90 353 352 353-352 90 90z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`create shapshot of when type is warning 1`] = `
<DocumentFragment>
  .emotion-0 {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1001;
  margin: 0.5rem;
}

.emotion-1 {
  width: 1rem;
  height: 1rem;
}

<div
    class="emotion-0"
  >
    <div
      class="fui-Alert ___1w0g6cp_1jh3gpt f22iagw f122n59 f5pgtk9 f1oic3e7 ff3glw6 f9ggezi fz58gqq fkhj508 fl43uef f19n0e5 fxugw4r"
      role="alert"
    >
      <span
        class="fui-Alert__icon ___1wifs8x_rs7eu10 fd461yt f4ybsrx fhivll6 fpti2h4"
      >
        <svg
          aria-hidden="true"
          class="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
          fill="currentColor"
          height="1em"
          viewBox="0 0 20 20"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8.68 2.79a1.5 1.5 0 0 1 2.64 0l6.5 12A1.5 1.5 0 0 1 16.5 17h-13a1.5 1.5 0 0 1-1.32-2.21l6.5-12ZM10.5 7.5a.5.5 0 0 0-1 0v4a.5.5 0 0 0 1 0v-4Zm.25 6.25a.75.75 0 1 0-1.5 0 .75.75 0 0 0 1.5 0Z"
            fill="currentColor"
          />
        </svg>
      </span>
      warning
      <button
        class="fui-Button r1alrhcs fui-Alert__action ___nkoa4j0_hz6oqh0 f1c21dwh f1p3nwhy f11589ue f1q5o8ev f1pdflbu f16muhyy fjxutwb f1s2uweq fr80ssc f1ukrpxl fecsdlb f139oj5f ft1hn21 fuxngvv fwiml72 f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1fg1p5m f1dfjoow f1j98vj9 f1tme0vf f4xjyn1 f18onu3q f9ddjv3 f4jnnbt fy77jfu f44c6la fcgxt0o"
        title="Dismiss"
        type="button"
      >
        <span
          class="fui-Button__icon rywnvv2"
        >
          <span
            aria-hidden="true"
            class="root_dd790ee3 emotion-1"
          >
            <svg
              class="svg_dd790ee3"
              focusable="false"
              viewBox="0 0 2048 2048"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M1024 0q141 0 272 36t244 104 207 160 161 207 103 245 37 272q0 141-36 272t-104 244-160 207-207 161-245 103-272 37q-141 0-272-36t-244-104-207-160-161-207-103-245-37-272q0-141 36-272t104-244 160-207 207-161T752 37t272-37zm0 1920q124 0 238-32t214-90 181-140 140-181 91-214 32-239q0-124-32-238t-90-214-140-181-181-140-214-91-239-32q-124 0-238 32t-214 90-181 140-140 181-91 214-32 239q0 124 32 238t90 214 140 181 181 140 214 91 239 32zm443-1249l-352 353 352 353-90 90-353-352-353 352-90-90 352-353-352-353 90-90 353 352 353-352 90 90z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
